# obs-rust

./: Cargo.toml  test.txt
src/: lib.rs
