[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha1 = "0.1.3"
base64 = "0.20.0-alpha.1"
chrono = "0.4.19"

[dev-dependencies.reqwest]
version = "0.11.11"
features = ["blocking", "json"]
